# kidney_tumor_CL_cudaC

./: README.md  docker-compose.build.yml  nvidia.yaml
.github/workflows/: CUDA_Build.yaml  CUDA_Build1.yaml
NN_backend/: Dockerfile
NN_backend/cuda_nn/: CMakeLists.txt  app.cpp  app.go  app.h
NN_backend/cuda_nn/costs/: MSE.cu  MSE.h
NN_backend/cuda_nn/example/: XOR.cu  XOR.h  kidney_cf.cpp  kidney_cf.h
NN_backend/cuda_nn/kidney-ct-scan-image/Normal/: Normal- (722).jpgZone.Identifier
NN_backend/cuda_nn/layers/: BatchNorm.cu  BatchNorm.h  CNN2D.cu  CNN2D.h  MaxPool2d.cu  MaxPool2d.h  ReLU.cu  ReLU.h  Sigmoid.cu  Sigmoid.h  flatten_layer.cu  flatten_layer.h  layer.h  linear.cu  linear.h
NN_backend/cuda_nn/models/: Image_CF.cpp  Image_CF.h  MLP.cpp  MLP.h
NN_backend/cuda_nn/utils/: Errorhelper.cpp  Tensor.cu  Tensor.h  tensor_oprations.cu  tensor_oprations.h
k8/: nn_backend_Deployment.yaml  nn_backend_Service.yaml  react_app_Service.yaml
k8s/: nn_backend_Deployment.yaml  nn_backend_Service.yaml  react_app_Deployment.yaml
react_app/: Dockerfile  package-lock.json  package.json
react_app/src/: App.js  setupProxy.js
